Modified text changes onto initial commit

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           <td><img src="Ajoy.png" alt="Ajoy Roy" /></td>
           <td>
             <h1>Ajoy Roy</h1>
-            <p>Software Development</p>
+            <p>Software Developer</p>
           </td>
         </tr>
       </tbody>
@@ -22,19 +22,21 @@
     <h3>Education</h3>
     <ul>
       <li>
-        BTech CSE
+        BTech CSE: 2019
         <ul>
           <li>NSHM Knowledge Campus</li>
         </ul>
       </li>
+      <br>
       <li>
-        XII
+        XII: 2014
         <ul>
           <li>Manisha International School</li>
         </ul>
       </li>
+      <br>
       <li>
-        X
+        X: 2012
         <ul>
           <li>De Nobili School</li>
         </ul>
@@ -92,5 +94,6 @@
         </td>
       </tr>
     </table>
+    <p><a href="contact-me.html">Contact Me</a></p>
   </body>
 </html>
