--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ajoy Learning Part-1</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="favicon.ico">
   </head>
-  <body>
+  <body">
     <table cellspacing="20">
       <tbody>
         <tr>
-          <td><img src="Ajoy.png" alt="Ajoy Roy" /></td>
+          <td><img src="images/Ajoy.png" alt="Ajoy Roy" /></td>
           <td>
             <h1>Ajoy Roy</h1>
             <p>Software Developer</p>
